// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PostsPlaceholder 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "zIndex": 1,
        },
        false,
      ]
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
              "borderBottomColor": "rgb(216, 216, 216)",
              "flex": 1,
              "shadowColor": "rgb(216, 216, 216)",
              "shadowOffset": Object {
                "height": 0.5,
                "width": 0,
              },
              "shadowOpacity": 0.85,
              "shadowRadius": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "maxHeight": undefined,
            "minHeight": undefined,
            "opacity": undefined,
            "transform": undefined,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "marginHorizontal": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityRole="header"
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 17,
                  "fontWeight": "600",
                }
              }
            >
              jest
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransitionStart={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "flexDirection": "row",
                          "width": "100%",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#efefef",
                            "borderRadius": 10,
                            "height": 20,
                            "width": 20,
                          },
                          Object {
                            "backgroundColor": undefined,
                            "marginRight": 8,
                          },
                          Object {
                            "overflow": "hidden",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#dfdfdf",
                            "height": "100%",
                            "opacity": 0.5,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "height": 20,
                            "marginBottom": 8,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#efefef",
                                "borderRadius": 2.5,
                                "height": 10,
                                "marginBottom": 10,
                                "width": "50%",
                              },
                              Object {
                                "backgroundColor": undefined,
                              },
                              Object {
                                "overflow": "hidden",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#dfdfdf",
                                "height": "100%",
                                "opacity": 0.5,
                              }
                            }
                          />
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#efefef",
                                "borderRadius": 2.5,
                                "height": 10,
                                "marginBottom": 10,
                                "width": "30%",
                              },
                              Object {
                                "backgroundColor": undefined,
                              },
                              Object {
                                "overflow": "hidden",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#dfdfdf",
                                "height": "100%",
                                "opacity": 0.5,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "flexDirection": "row",
                          "width": "100%",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#efefef",
                              "borderRadius": 13,
                              "height": 52,
                              "marginBottom": 52,
                              "width": "100%",
                            },
                            Object {
                              "backgroundColor": undefined,
                              "borderRadius": 5,
                              "marginBottom": 8,
                            },
                            Object {
                              "overflow": "hidden",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "#dfdfdf",
                              "height": "100%",
                              "opacity": 0.5,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "marginBottom": 32,
                        },
                        Object {
                          "flexDirection": "row",
                          "width": "100%",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#efefef",
                                "borderRadius": 5,
                                "height": 20,
                                "marginBottom": 20,
                                "width": "15%",
                              },
                              Object {
                                "backgroundColor": undefined,
                                "marginRight": 8,
                              },
                              Object {
                                "overflow": "hidden",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#dfdfdf",
                                "height": "100%",
                                "opacity": 0.5,
                              }
                            }
                          />
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#efefef",
                                "borderRadius": 5,
                                "height": 20,
                                "marginBottom": 20,
                                "width": "15%",
                              },
                              Object {
                                "backgroundColor": undefined,
                                "marginRight": 8,
                              },
                              Object {
                                "overflow": "hidden",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#dfdfdf",
                                "height": "100%",
                                "opacity": 0.5,
                              }
                            }
                          />
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#efefef",
                                "borderRadius": 5,
                                "height": 20,
                                "marginBottom": 20,
                                "width": "15%",
                              },
                              Object {
                                "backgroundColor": undefined,
                                "marginRight": 8,
                              },
                              Object {
                                "overflow": "hidden",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#dfdfdf",
                                "height": "100%",
                                "opacity": 0.5,
                              }
                            }
                          />
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#efefef",
                                "borderRadius": 5,
                                "height": 20,
                                "marginBottom": 20,
                                "width": "15%",
                              },
                              Object {
                                "backgroundColor": undefined,
                                "marginRight": 8,
                              },
                              Object {
                                "overflow": "hidden",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#dfdfdf",
                                "height": "100%",
                                "opacity": 0.5,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders PostsPlaceholder without reactions 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "zIndex": 1,
        },
        false,
      ]
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
              "borderBottomColor": "rgb(216, 216, 216)",
              "flex": 1,
              "shadowColor": "rgb(216, 216, 216)",
              "shadowOffset": Object {
                "height": 0.5,
                "width": 0,
              },
              "shadowOpacity": 0.85,
              "shadowRadius": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "maxHeight": undefined,
            "minHeight": undefined,
            "opacity": undefined,
            "transform": undefined,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "marginHorizontal": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityRole="header"
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 17,
                  "fontWeight": "600",
                }
              }
            >
              jest
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransitionStart={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "flexDirection": "row",
                          "width": "100%",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#efefef",
                            "borderRadius": 10,
                            "height": 20,
                            "width": 20,
                          },
                          Object {
                            "backgroundColor": undefined,
                            "marginRight": 8,
                          },
                          Object {
                            "overflow": "hidden",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#dfdfdf",
                            "height": "100%",
                            "opacity": 0.5,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "height": 20,
                            "marginBottom": 8,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#efefef",
                                "borderRadius": 2.5,
                                "height": 10,
                                "marginBottom": 10,
                                "width": "50%",
                              },
                              Object {
                                "backgroundColor": undefined,
                              },
                              Object {
                                "overflow": "hidden",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#dfdfdf",
                                "height": "100%",
                                "opacity": 0.5,
                              }
                            }
                          />
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#efefef",
                                "borderRadius": 2.5,
                                "height": 10,
                                "marginBottom": 10,
                                "width": "30%",
                              },
                              Object {
                                "backgroundColor": undefined,
                              },
                              Object {
                                "overflow": "hidden",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#dfdfdf",
                                "height": "100%",
                                "opacity": 0.5,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "flexDirection": "row",
                          "width": "100%",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#efefef",
                              "borderRadius": 13,
                              "height": 52,
                              "marginBottom": 52,
                              "width": "100%",
                            },
                            Object {
                              "backgroundColor": undefined,
                              "borderRadius": 5,
                              "marginBottom": 8,
                            },
                            Object {
                              "overflow": "hidden",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "#dfdfdf",
                              "height": "100%",
                              "opacity": 0.5,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
